--- a/cute_valentines_invite(1).html
+++ b/cute_valentines_invite(1).html
@@ -201,7 +201,7 @@
       <div class="polaroid-wrapper">
         <div class="polaroid">
           <img src="https://drive.google.com/thumbnail?id=1m6OLPT5Uah2JnjvryVHBTBSm7WTnkc25&sz=w1000" alt="Us together">
-          <div class="caption">my favorite selfies 💕</div>
+          <div class="caption">mga hatdog bebers 💕</div>
         </div>
       </div>
 
@@ -215,7 +215,7 @@
       <div class="polaroid-wrapper">
         <div class="polaroid">
           <img src="https://drive.google.com/thumbnail?id=1zpvUiBZAKc0ymL-65dy9AIeaTiPrQtwT&sz=w1000" alt="Date vibes">
-          <div class="caption">more dates pls 💖</div>
+          <div class="caption">cute naten lamaw💖</div>
         </div>
       </div>
     </div>
