--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 
     <p>
       Hi <strong>Bebechin!!</strong>! 🌸<br><br>
-      Nais kitang masama this 14 maaari ba pls pls pls ✨
+      Nais kitang makasama this 14 maaari ba pls pls pls ✨
     </p>
 
     <div class="details">
