--- a/index.html
+++ b/index.html
@@ -200,22 +200,22 @@
     <div class="gallery">
       <div class="polaroid-wrapper">
         <div class="polaroid">
-          <img src="https://drive.google.com/thumbnail?id=1m6OLPT5Uah2JnjvryVHBTBSm7WTnkc25&sz=w1000" alt="Us together">
-          <div class="caption">mga hatdog bebers 💕</div>
+          <img src="/images/us1.jpg" alt="Us together">
+          <div class="caption">my favorite selfies 💕</div>
         </div>
       </div>
 
       <div class="polaroid-wrapper">
         <div class="polaroid">
-          <img src="https://drive.google.com/thumbnail?id=1CLGDBuRqg_mSgfRMIF8KUJeYI9-zehdn&sz=w1000" alt="Cute mirror pic">
+          <img src="/images/us2.jpg" alt="Cute mirror pic">
           <div class="caption">partners in crime 😎</div>
         </div>
       </div>
 
       <div class="polaroid-wrapper">
         <div class="polaroid">
-          <img src="https://drive.google.com/thumbnail?id=1zpvUiBZAKc0ymL-65dy9AIeaTiPrQtwT&sz=w1000" alt="Date vibes">
-          <div class="caption">cute naten lamaw💖</div>
+          <img src="/images/us3.jpg" alt="Date vibes">
+          <div class="caption">more dates pls 💖</div>
         </div>
       </div>
     </div>
